--- a/share/container/install
+++ b/share/container/install
@@ -938,11 +938,11 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 	    sed -i 's/^deb/##&/g' /etc/apt/sources.list
 	    #stable-backports会出错，需改为buster-backports
 	    cat >>/etc/apt/sources.list <<-'EndOfFile'
-				#deb http://mirrors.huaweicloud.com/debian/ stable main contrib non-free
-				#deb http://mirrors.huaweicloud.com/debian/ stable-updates main contrib non-free
-				#deb http://mirrors.huaweicloud.com/debian/ buster-backports main contrib non-free
-				#deb http://mirrors.huaweicloud.com/debian-security/ stable/updates main contrib non-free
-				deb http://mirrors.163.com/debian/ sid main contrib non-free
+				#deb http://opentuna.cn/debian/ stable main contrib non-free
+				#deb http://opentuna.cn/debian/ stable-updates main contrib non-free
+				#deb http://opentuna.cn/debian/ buster-backports main contrib non-free
+				#deb http://opentuna.cn/debian-security/ stable/updates main contrib non-free
+				deb http://opentuna.cn/debian/ sid main contrib non-free
 			EndOfFile
 	}
 	##############################
@@ -951,7 +951,7 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 	    sed -i 's/^deb/##&/g' /etc/apt/sources.list
 	    cat >>/etc/apt/sources.list <<-"EndOfSourcesList"
 				deb http://mirrors.bfsu.edu.cn/kali/ kali-rolling main contrib non-free
-				deb http://mirrors.huaweicloud.com/debian/ stable main contrib non-free
+				deb http://opentuna.cn/debian/ stable main contrib non-free
 				# deb http://mirrors.huaweicloud.com/kali/ kali-last-snapshot main contrib non-free
 			EndOfSourcesList
 	    #注意：kali-rolling添加debian testing源后，可能会破坏系统依赖关系，可以添加stable源（暂未发现严重影响）
