--- a/share/container/install
+++ b/share/container/install
@@ -1488,11 +1488,8 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 	    #localedef -c -f UTF-8 -i zh_CN zh_CN.utf8
 	    #dnf clean packages
 	}
-	######################
-	if [ "$(sed -n p /etc/os-release | grep 'ID=' | head -n 1 | cut -d '=' -f 2 |cut -d '"' -f 2)" = "fedora" ]; then
+	fedora_rpmfusion_repo(){
 		yum install -y --nogpgcheck https://mirrors.bfsu.edu.cn/rpmfusion/free/fedora/rpmfusion-free-release-$(rpm -E %fedora).noarch.rpm https://mirrors.bfsu.edu.cn/rpmfusion/nonfree/fedora/rpmfusion-nonfree-release-$(rpm -E %fedora).noarch.rpm
-	    tar -Ppzcf ~/yum.repos.d-backup.tar.gz /etc/yum.repos.d
-	    mv -f ~/yum.repos.d-backup.tar.gz /etc/yum.repos.d
 		for i in $(ls /etc/yum.repos.d/rpmfusion*repo | grep -v rawhide); do
 	        #cp -vf ${i} ${i}.backup
 	        sed -e 's!^metalink=!#metalink=!g' \
@@ -1501,6 +1498,11 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 	            -e 's!http://mirrors\.bfsu!https://mirrors.bfsu!g' \
 	            -i ${i}
 	    done
+	}
+	######################
+	if [ "$(sed -n p /etc/os-release | grep 'ID=' | head -n 1 | cut -d '=' -f 2 |cut -d '"' -f 2)" = "fedora" ]; then
+	    tar -Ppzcf ~/yum.repos.d-backup.tar.gz /etc/yum.repos.d
+	    mv -f ~/yum.repos.d-backup.tar.gz /etc/yum.repos.d
 	    FEDORA_VERSION="$(sed -n p /etc/os-release | grep 'VERSION_ID' | cut -d '=' -f 2)"
 		sed -i -E "s@(enabled)=1@\1=0@" /etc/yum.repos.d/fedora-updates-testing-modular.repo /etc/yum.repos.d/fedora-updates-testing.repo
 		case ${LANG} in
@@ -1511,10 +1513,14 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 	        else
 	            fedora_31_repos
 	        fi
-	        fedora_3x_repos
+			fedora_3x_repos
 	    fi
+
 			if [[ ! -e /tmp/resolv.conf ]];then
 				cp -f /etc/resolv.conf /tmp
+			fi
+			if ((${FEDORA_VERSION} >= 32)); then
+				fedora_rpmfusion_repo
 			fi
 			dnf update -y
 			[[ $(command -v systemctl) ]] || dnf install -y systemd
