--- a/share/container/install
+++ b/share/container/install
@@ -1139,7 +1139,7 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 					SigLevel = Never
 				Endofpacman
 	    fi
-	    pacman -Syu --noconfirm archlinux-keyring
+	    pacman -Syu --noconfirm archlinux-keyring fakeroot
 	    pacman -Sy --noconfirm archlinuxcn-keyring
 	    pacman -S --noconfirm yay
 	    yay --aururl "https://aur.tuna.tsinghua.edu.cn" --save
