--- a/share/container/install
+++ b/share/container/install
@@ -1476,9 +1476,10 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 		fi 
 	    emerge-webrsync
 	    emerge --config sys-libs/timezone-data 2>/dev/null
-	    #eselect profile list
-	    GENTOOnosystemdStable="$(eselect profile list | egrep -v 'desktop|hardened|developer|systemd|selinux|multilib' | grep stable | tail -n 1 | cut -d '[' -f 2 | cut -d ']' -f 1)"
-	    eselect profile set "${GENTOOnosystemdStable}"
+	    eselect profile list
+	    GENTOO_NON_SYSTEMD_PROFILE="$(eselect profile list | egrep -v 'desktop|hardened|developer|systemd|selinux|multilib' | grep stable | tail -n 1 | cut -d '[' -f 2 | cut -d ']' -f 1)"
+		[[ -n ${GENTOO_NON_SYSTEMD_PROFILE} ]] || GENTOO_NON_SYSTEMD_PROFILE=1
+	    eselect profile set "${GENTOO_NON_SYSTEMD_PROFILE}"
 	    etc-update --automode -3
 	    etc-update
 	    #dispatch-conf
