--- a/share/container/install
+++ b/share/container/install
@@ -1443,18 +1443,20 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 	##########################
 	gentoo_gnu_linux_make_conf() {
 	    LINUX_DISTRO=gentoo
+	    #bash /etc/profile
+	    mkdir -pv '/usr/portage'
+	    #下面生成的文件不要留空格
+	   case ${LANG} in
+	   zh_*UTF-8)
 	    grep -q 'zh_CN' /etc/locale.gen || printf "%s\n%s\n" "zh_CN.UTF-8 UTF-8" "en_US.UTF-8 UTF-8" >>/etc/locale.gen
 	    locale-gen
 	    GENTOOLOCALE="$(eselect locale list | grep 'zh_CN' | head -n 1 | cut -d '[' -f 2 | cut -d ']' -f 1)"
 	    eselect locale set "${GENTOOLOCALE}"
-	    #bash /etc/profile
-	    mkdir -p '/usr/portage'
-	    #下面生成的文件不要留空格
-	   case ${LANG} in
-	   zh_*UTF-8)
 	   printf '%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n%s\n' 'ACCEPT_LICENSE="*"' 'MAKEOPTS="-j8"' 'L10N="zh-CN en-US"' 'LINGUAS="zh_CN en_US"' 'PORTDIR="/usr/portage"' 'DISTDIR="${PORTDIR}/distfiles"' 'PKGDIR="${PORTDIR}/packages"' 'GENTOO_MIRRORS="https://mirrors.bfsu.edu.cn/gentoo"' 'EMERGE_DEFAULT_OPTS="--ask --verbose=y --keep-going --with-bdeps=y --load-average"' 'FEATURES="${FEATURES} -userpriv -usersandbox -sandbox"' >> /etc/portage/make.conf
 	   ;;
 	   *)
+	       grep -q 'en_US' /etc/locale.gen || printf "%s\n" "en_US.UTF-8 UTF-8" >>/etc/locale.gen
+	       locale-gen
 	       printf '%s\n%s\n%s\n%s\n%s\n%s\n%s\n' 'ACCEPT_LICENSE="*"' 'MAKEOPTS="-j8"' 'PORTDIR="/usr/portage"' 'DISTDIR="${PORTDIR}/distfiles"' 'PKGDIR="${PORTDIR}/packages"' 'EMERGE_DEFAULT_OPTS="--ask --verbose=y --keep-going --with-bdeps=y --load-average"' 'FEATURES="${FEATURES} -userpriv -usersandbox -sandbox"' >> /etc/portage/make.conf
 	   ;;
 	   esac
