--- a/share/container/install
+++ b/share/container/install
@@ -1449,13 +1449,21 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 	printf "$RESET"
 	####################
 	if [[ -n $(command -v apt) ]];then
-		printf "%s\n" "${GREEN}apt ${YELLOW}install -y ${BLUE}apt-utils ca-certificates wget curl${RESET}"
+		printf "%s\n" "${GREEN}apt ${YELLOW}install -y ${BLUE}apt-utils ca-certificates${RESET}"
 		apt install -y apt-utils 2>/dev/null
-		apt install -y ca-certificates wget curl 2>/dev/null
+		apt install -y ca-certificates 2>/dev/null
+		if [[ -n $(command -v apt) ]];then
+			for i in curl wget;do
+				if [[ ! -n $(command -v ${i}) ]];then
+					printf "%s\n" "${GREEN}apt ${YELLOW}install -y ${BLUE}${i}${RESET}"
+					apt install -y ${i} 2>/dev/null
+				fi 
+			done   
+		fi  
+		if egrep -q 'squeeze|wheezy|stretch|jessie' "/etc/os-release"; then
+	      apt install -y apt-transport-https 2>/dev/null
+		fi
 	fi 
-	if egrep -q 'squeeze|wheezy|stretch|jessie' "/etc/os-release"; then
-	     apt install -y apt-transport-https 2>/dev/null
-	fi
 
 	if [[ ! -e /etc/apt/sources.list.d/raspi.list && -e /etc/apt/sources.list ]]; then
 		case $(uname -m) in
@@ -1581,14 +1589,13 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 		if [[ ! -n $(command -v pkill) ]];then
 			printf "%s\n" "${GREEN}apt ${YELLOW}install -y ${BLUE}procps${RESET}"
 			apt install -y procps 2>/dev/null
-		fi 
-		if [[ ! -n $(command -v whiptail) ]];then
-			printf "%s\n" "${GREEN}apt ${YELLOW}install -y ${BLUE}whiptail${RESET}"
-			apt install -y whiptail 2>/dev/null
-		fi 
-		if egrep -q 'deepin|uos\.com' "/etc/os-release";then
-			apt install -y dialog
 		fi
+		for i in whiptail dialog lolcat;do
+			if [[ ! -n $(command -v ${i}) ]];then
+				printf "%s\n" "${GREEN}apt ${YELLOW}install -y ${BLUE}${i}${RESET}"
+				apt install -y ${i} 2>/dev/null
+			fi 
+		done   
 		apt clean 2>/dev/null
 	fi
 	#############################
