--- a/share/container/install
+++ b/share/container/install
@@ -1773,8 +1773,9 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 	note_of_non_debian() {
 		case ${LANG} in
 		zh*UTF-8) printf "%s\n" "您可以输${GREEN}debian-i${RESET}或${YELLOW}tmoe t${RESET}来打开软件安装工具" ;;
-		*) printf "You can type ${GREEN}debian-i${RESET} or ${YELLOW}tmoe t${RESET} to start ${BLUE}tmoe-linux tool.${RESET}";;
+		*) ;;
 		esac
+		printf "%s\n" "You can type ${GREEN}debian-i${RESET} or ${YELLOW}tmoe t${RESET} to start ${BLUE}tmoe-linux tool.${RESET}"
 	    bash zsh.sh
 	}
 	################
