--- a/share/container/install
+++ b/share/container/install
@@ -1152,7 +1152,6 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 		fi
 		DEBIAN_STABLE_LIST='/etc/apt/sources.list.d/debian-stable.list'
 		sed -i 's@http:@https:@g' /etc/apt/sources.list 2>/dev/null
-		sed -n p /etc/apt/sources.list
 		printf "%s\n" "deb https://mirrors.bfsu.edu.cn/debian/ ${DEBIAN_VERSION} main" > ${DEBIAN_STABLE_LIST}
 		chmod a+r -v ${DEBIAN_STABLE_LIST}
 	elif grep -q 'OpenWrt' "/etc/os-release"; then
@@ -1165,7 +1164,7 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 	###tmoe-github TMOE_GITHUB='true'
 	#勿删上面那条注释
 	##dns
-	[[ ! -e /etc/apt/sources.list ]] || cat /etc/apt/sources.list
+	[[ ! -e /etc/apt/sources.list ]] || grep -v proposed /etc/apt/sources.list
 	rm -f /etc/resolv.conf
 	cat >/etc/resolv.conf <<-'EndOfFile'
 	nameserver 114.114.114.114
@@ -1177,6 +1176,10 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 	chmod a+r /etc/resolv.conf /tmp/resolv.conf
 	cat /etc/resolv.conf
 	printf "%s\n" ""
+	if egrep -q 'puppy_linux' /etc/os-release 2>/dev/null;then
+		rm -f ~/.profile vnc-autostartup 2>/dev/null
+		[[ ! -e ~/.profile.bak ]] || mv -f ~/.profile.bak ~/.profile 2>/dev/null
+	fi
 	######################
 	###################
 	arch_linux_mirror_list() {
