--- a/share/container/install
+++ b/share/container/install
@@ -1179,6 +1179,10 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 	if egrep -q 'puppy_linux' /etc/os-release 2>/dev/null;then
 		rm -f ~/.profile vnc-autostartup 2>/dev/null
 		[[ ! -e ~/.profile.bak ]] || mv -f ~/.profile.bak ~/.profile 2>/dev/null
+		for i in zsh bash sh su;do
+			[[ ! -n $(command -v ${i}) ]] || exec ${i}
+			exit 0 
+		fi
 	fi
 	######################
 	###################
