--- a/share/container/install
+++ b/share/container/install
@@ -1176,7 +1176,7 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 	chmod a+r /etc/resolv.conf /tmp/resolv.conf
 	cat /etc/resolv.conf
 	printf "%s\n" ""
-	if egrep -q 'puppy_linux' /etc/os-release 2>/dev/null;then
+	if egrep -q 'puppy_linux|clear-linux-os' /etc/os-release 2>/dev/null;then
 		rm -f ~/.profile vnc-autostartup 2>/dev/null
 		[[ ! -e ~/.profile.bak ]] || mv -f ~/.profile.bak ~/.profile 2>/dev/null
 		for i in zsh bash sh su;do
