--- a/share/container/install
+++ b/share/container/install
@@ -1176,14 +1176,6 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 	chmod a+r /etc/resolv.conf /tmp/resolv.conf
 	cat /etc/resolv.conf
 	printf "%s\n" ""
-	if egrep -q 'puppy_linux|clear-linux-os' /etc/os-release 2>/dev/null;then
-		rm -f ~/.profile vnc-autostartup 2>/dev/null
-		[[ ! -e ~/.profile.bak ]] || mv -f ~/.profile.bak ~/.profile 2>/dev/null
-		for i in zsh bash sh su;do
-			[[ ! -n $(command -v ${i}) ]] || exec ${i}
-			exit 0 
-		done
-	fi
 	######################
 	###################
 	arch_linux_mirror_list() {
@@ -1313,6 +1305,14 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 		fi
 		;;
 	esac
+	if egrep -q 'puppy_linux|clear-linux-os|EulerOS' /etc/os-release 2>/dev/null;then
+		rm -f ~/.profile vnc-autostartup 2>/dev/null
+		[[ ! -e ~/.profile.bak ]] || mv -f ~/.profile.bak ~/.profile 2>/dev/null
+		for i in zsh bash sh su;do
+			[[ ! -n $(command -v ${i}) ]] || exec ${i}
+			exit 0 
+		done
+	fi
 	##############
 	alpine_linux_configure() {
 	    if [ "$(sed -n 2p /etc/os-release | cut -d '=' -f 2)" = "alpine" ]; then
