--- a/share/container/install
+++ b/share/container/install
@@ -1306,12 +1306,13 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 		;;
 	esac
 	if egrep -q 'puppy_linux|clear-linux-os|EulerOS' /etc/os-release 2>/dev/null;then
-		rm -f ~/.profile vnc-autostartup 2>/dev/null
+		cd ~
+		rm -f ~/.profile vnc-autostartup zsh.sh zsh-i.sh 2>/dev/null
 		[[ ! -e ~/.profile.bak ]] || mv -f ~/.profile.bak ~/.profile 2>/dev/null
 		for i in zsh bash sh su;do
 			[[ ! -n $(command -v ${i}) ]] || exec ${i}
-			exit 0 
 		done
+		exit 0
 	fi
 	##############
 	alpine_linux_configure() {
