--- a/share/container/install
+++ b/share/container/install
@@ -441,11 +441,15 @@ creat_chroot_startup_script() {
 	if [ $(command -v getprop) ]; then
 		ANDROID_HOST_NAME=$(getprop ro.product.model | sed 's@ @-@g;s@ @@g')
 		printf "%s\n" "${ANDROID_HOST_NAME}" >hostname
-		${TMOE_CHROOT_PREFIX} cp hostname ${DEBIAN_CHROOT}/tmp
-		${TMOE_CHROOT_PREFIX} mv hostname ${DEBIAN_CHROOT}/etc
 		case $(hostname) in
 		localhost | "") ${TMOE_CHROOT_PREFIX} hostname ${ANDROID_HOST_NAME} 2>/dev/null ;;
 		esac
+	else
+		[[ ! -n $(command -v hostname) ]] || printf "%s\n" "$(hostname)" >hostname
+	fi
+	if [[ -s hostname ]]; then
+		${TMOE_CHROOT_PREFIX} cp hostname ${DEBIAN_CHROOT}/tmp
+		${TMOE_CHROOT_PREFIX} mv hostname ${DEBIAN_CHROOT}/etc
 	fi
 	printf "%s\n" "Creating chroot startup script"
 	printf "%s\n" "正在创建chroot容器启动脚本"
@@ -556,6 +560,10 @@ creat_proot_startup_script() {
 	if [ $(command -v getprop) ]; then
 		ANDROID_HOST_NAME=$(getprop ro.product.model | sed 's@ @-@g;s@ @@g')
 		printf "%s\n" "${ANDROID_HOST_NAME}" >hostname
+	else
+		[[ ! -n $(command -v hostname) ]] || printf "%s\n" "$(hostname)" >hostname
+	fi
+	if [[ -s hostname ]]; then
 		${TMOE_CHROOT_PREFIX} cp hostname ${DEBIAN_CHROOT}/tmp
 		${TMOE_CHROOT_PREFIX} mv hostname ${DEBIAN_CHROOT}/etc
 	fi
@@ -898,8 +906,7 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 		fi
 	fi
 	if [[ -n $(command -v hostname) ]];then
-		HOSTNAME=$(hostname)
-		if ! grep -q "${HOSTNAME}" /etc/hosts 2>/dev/null;then
+		if ! grep -q "$(hostname)" /etc/hosts 2>/dev/null;then
 			printf "%s\n" "127.0.0.1 $(hostname)" >>/etc/hosts
 		fi
 	fi
