--- a/share/container/install
+++ b/share/container/install
@@ -762,12 +762,13 @@ chmod a+x neofetch debian-i
 ${TMOE_CHROOT_PREFIX} cp neofetch debian-i ${DEBIAN_CHROOT}/usr/local/bin
 
 ${TMOE_CHROOT_PREFIX} chmod u+w -v "${DEBIAN_CHROOT}/root"
-
-curl -Lo zsh-i.sh 'https://gitee.com/mo2/zsh/raw/master/zsh.sh'
+if [ ! -s "zsh-i.sh" ]; then
+	curl -Lo zsh-i.sh 'https://gitee.com/mo2/zsh/raw/2/2'
+fi
 #sed -i 's:#!/usr/bin/env bash:#!/usr/bin/env bash:' zsh-i.sh
 #curl -Lo zsh.sh 'https://gitee.com/mo2/linux/raw/master/zsh.sh'
 cp -f ${TMOE_GIT_DIR}/zsh.sh ./
-chmod +x zsh.sh zsh-i.sh
+chmod a+x zsh.sh zsh-i.sh
 ${TMOE_CHROOT_PREFIX} mv zsh-i.sh zsh.sh ${DEBIAN_CHROOT}/root
 #chmod u+x ./*
 ###########
