--- a/share/container/install
+++ b/share/container/install
@@ -1675,7 +1675,7 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 		printf "%s\n" "${GREEN}apt ${YELLOW}install -y ${BLUE}apt-utils ca-certificates curl wget${RESET}"
 		[[ -n $(command -v apt-extracttemplates) ]] || apt install -y apt-utils 2>/dev/null
 		for i in curl wget;do
-			[[ -n $(command -v ${i}) ]] || apt install -y curl wget
+			[[ -n $(command -v ${i}) ]] || apt install -y ${i}
 		done 
 		[[ -e /usr/sbin/update-ca-certificates ]] || apt install -y ca-certificates 2>/dev/null
 		if egrep -q 'squeeze|wheezy|stretch|jessie' "/etc/os-release"; then
