--- a/share/container/install
+++ b/share/container/install
@@ -1855,6 +1855,8 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 		printf "%s\n" "${GREEN}eatmydata apt ${YELLOW}-y ${BLUE}dist-upgrade${RESET}"
 		if [[ ${WEEKLY_BUILD_CONTAINER} != true ]];then
 			eatmydata apt dist-upgrade -y 2>/dev/null || apt dist-upgrade -y 2>/dev/null
+		else
+			printf "%s\n" "You are using weekly/moothly build container,${PURPLE}skipping automatic upgrade${RESET}..." 
 		fi
 		if [[ ! $(command -v pkill) ]];then
 			printf "%s\n" "${GREEN}eatmydata apt ${YELLOW}install -y ${BLUE}procps${RESET}"
@@ -1987,6 +1989,8 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
 		printf "%s\n" "${GREEN}dnf ${YELLOW}update -y${RESET}"
 		if [[ ${WEEKLY_BUILD_CONTAINER} != true ]];then
 			dnf update -y
+		else
+			printf "%s\n" "You are using weekly/moothly build container,${PURPLE}skipping automatic upgrade${RESET}..." 
 		fi
 		[[ $(command -v hostname) ]] || dnf install -y hostname
 		[[ $(command -v systemctl) ]] || dnf install -y systemd
