--- a/share/container/install
+++ b/share/container/install
@@ -761,7 +761,7 @@ cat >${PREFIX}/bin/startxsdl <<-ENDOFXSDL
 	fi
 ENDOFXSDL
 ################
-#aria2c --console-log-level=warn --no-conf --allow-overwrite=true -d ${PREFIX}/bin -o debian-i 'https://gitee.com/mo2/linux/raw/master/manager.sh'
+#aria2c --console-log-level=warn --no-conf --allow-overwrite=true -d ${PREFIX}/bin -o debian-i 'https://cdn.jsdelivr.net/gh/2moe/tmoe-linux@master/.mirror/manager'
 #############
 printf '%s\n' 'Giving startup script execution permission'
 printf "%s\n" "正在赋予启动脚本执行权限"
@@ -789,7 +789,7 @@ if [[ -e "debian-i" ]]; then
 	chmod 666 debian-i
 	rm -f debian-i
 fi
-#curl -Lo "debian-i" 'https://gitee.com/mo2/linux/raw/master/tool.sh'
+#curl -Lo "debian-i" 'https://cdn.jsdelivr.net/gh/2moe/tmoe-linux@master/.mirror/tool'
 cp -f ${TMOE_GIT_DIR}/tool.sh ./debian-i
 chmod a+x neofetch debian-i
 
