--- a/share/old-version/share/container/install
+++ b/share/old-version/share/container/install
@@ -2263,15 +2263,15 @@ cat >'.profile' <<-'ENDOFbashPROFILE'
         $is_whiptail_0_52 && {
             _file="wrapper.tar.gz"
             case $(uname -m) in
-            aarch64) _arch=arm64;;
             amd64|x86_64) _arch=amd64;;
             armv7*|armv8l) _arch=armhf;;
+            aarch64|arm64|armv9*|armv8*) _arch=arm64;;
             pcc64*) _arch=ppc64el;;
             mips64*) _arch=misp64el;;
             misp*) _arch=mipsel;;
             s390*) _arch=s390x;;
             esac
-            curl -Lo $_file "https://packages.tmoe.me/patch/debian/w/whiptail/whiptail-wrapper_0.52.21_$(dpkg --print-architecture).tar.gz"
+            curl -Lo $_file "https://packages.tmoe.me/patch/debian/w/whiptail/whiptail-wrapper_0.52.21_$_arch.tar.gz"
             tar -zxvf $_file -C /
             /usr/local/sbin/whiptail-wrapper --init
             unlink $_file
